src/app/components/SearchForm/SearchForm.module.css
.form {
  display: flex;
  flex-direction: column;
  gap: 20px;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  padding: 24px;

  .input {
    min-width: 260;
    border-radius: 4;
    padding: 12;
    border: solid 2 white;
    height: 42px;
    font-size: 1.2rem;
    background-color: transparent;
  }

  .input:focus {
    border-color: pink;
    outline: none;
  }

  .inputContainer {
    display: flex;
    flex-wrap: wrap;
    gap: 16px;
    justify-content: center;
  }
}

